# deep_infix

./: README.md  _deep_infix.py  deep_types.py  eval.py  main.py  pyproject.toml  utils.py
_training/: color.py  main.py  utils.py
_training/configs/: config.yaml
_training/dataset/: config.yaml  dataset.py
_training/models/: linear.py  mlp.py
configs/: config.yaml
dataset/: dataset.py
examples/: hello_world.py
runner/: runner.py
saved_weights/og_weights/: test_best_model.pt  test_loss.html
training/: eval.py  viz.py
