[project]
name = "deep-infix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "ipdb>=0.13.13",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "skeletonkey>=0.3.1.0",
    "torch>=2.6.0",
    "torchtyping>=0.1.5",
    "tqdm>=4.67.1",
]
